# xpsimport

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
include/: xpsimport.h
src/: ascii.rs  ascii_ops.rs  bin_ops.rs  binary.rs  bone_naming.rs  constants.rs  error_types.rs  file_input.rs  file_stream.rs  interface.rs  lib.rs  loader.rs  material.rs  mesh_name_parser.rs  read_ascii.rs  read_bin.rs  types.rs
